# natsu24

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: joint_controller.yaml
gr-sakura/natsu24/: Air.h  ConvPos.h  CorrectPos.h  Encoder.h  Imu.h  Motor2.h  OmniDrive.h  PID.h  Path.h  PathF.h  Plan.h  PurePursuit.h  Switch.h  Test.h  Tof.h  natsu24.ino
include/natsu24/: Air.h  Common.h  ConvPos.h  CorrectPos.h  Encoder.h  Imu.h  Motor2.h  Odometry.h  OmniDrive.h  PID.h  Plan.h  PurePursuit.h  Switch.h  Tof.h  main.h
include/natsu24/Study/: Motor_OmniDrive.cpp  pointa.c  pointa_class.cpp  pointa_hensu.cpp
launch/: gazebo.launch.py  natsu24.launch.py
models/natsu24_frame0/: model.config  model.sdf
models/natsu24_frame1/: model.config  model.sdf
models/natsu24_frame2/: model.config  model.sdf
models/natsu24_frame3/: model.config  model.sdf
models/natsu24_frame4/: model.config  model.sdf
models/natsu24_frame5/: model.config  model.sdf
plan/: make_header.py  make_video.py  path_0.py  path_1.py  path_2.py  path_3.py  planning_casadi.py  planning_spline.py
plan/output/: X0.npz  X1.npz  X2.npz  X3.npz
plan_forward/: make_header.py  path_0.py  path_1.py  path_2.py  path_3.py
plan_forward/output/: X0.npz  X1.npz  X2.npz  X3.npz
src/: Serial.h  natsu24.cpp
urdf/: body.xacro  laser.xacro  natsu24.gazebo.xacro  natsu24.ros2_control.xacro  natsu24.xacro  omni100.xacro
world/: natsu24.world
